added the code for partition demo of apache hudi table in AWS S3